--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@upstash/ratelimit": "^1.0.1",
     "dayjs": "^1.11.10",
     "next": "^14.1.3",
     "react": "18.2.0",
