--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,25 @@
-name: Node.js CI
+name: CI
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push, pull_request]
 
 env:
-  DATABASE_URL: "https://fakedb.com"
-  NODE_ENV: production
+  DATABASE_URL: "https://fake.com"
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "16"
-        
-      - name: Install dependencies
+      - name: Install Dependencies
         run: npm install
 
-      - name: Install Prisma CLI
-        run: npm install prisma --save-dev
+      - name: Typecheck
+        run: npm run typecheck
 
-      - name: TSC actions
-        # You may pin to the exact commit or the version.
-        # uses: stepek/tsc-action@512d9cc82fcff4da48a6339d3b2a57852fafc8cb
-        uses: stepek/tsc-action@1.0.0
-
-      - name: Run ESLint
+      - name: Lint
         run: npm run lint
 
       - name: Print Environment Variable
